--- a/Desenvolvimento Front-End/src/index.css
+++ b/Desenvolvimento Front-End/src/index.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@font-face {
+/* @font-face {
     font-family: 'alfa';
     src: url(../../fontes/AlfaSlabOne-Regular.ttf);
     font-weight: normal;
@@ -23,7 +23,7 @@
   
     --font-destaque: 'alfa', serif, cursive;
     --font-padrao: 'alexandria', Arial, sans-serif;
-}
+} */
 
 /* .font-destaque{
     font-family: 'alfa', serif, cursive;;
